[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprite/Unshaded.tres" type="Material" id=1]
[ext_resource path="res://Level/Goal/AudioStep.gd" type="Script" id=2]
[ext_resource path="res://XcyMode/AlternateGoal.gd" type="Script" id=3]
[ext_resource path="res://Sprite/Goal/Tent.png" type="Texture" id=4]
[ext_resource path="res://Sound/PlayerStep.wav" type="AudioStream" id=5]
[ext_resource path="res://Sound/EntityWaveAttack.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/EntityCharge.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Heartbreaking.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprite/Particles/LightPart.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Player/PlayerSprite.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprite/Entity/EntitySprite.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprite/Goal/OtherFrames.tres" type="SpriteFrames" id=12]
[ext_resource path="res://Sprite/Goal/FireplaceFrames.tres" type="SpriteFrames" id=13]
[ext_resource path="res://XcyMode/doritos.png" type="Texture" id=14]
[ext_resource path="res://XcyMode/xcyiterr-adventure.png" type="Texture" id=15]

[sub_resource type="Animation" id=17]
resource_name = "1"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "WalkDown", "WalkDown" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 83, -5 ), Vector2( 49, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioStep")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_sound"
}, {
"args": [  ],
"method": "stop_timer"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("PlayerSprite/Light2D:energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Other:animation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "default", "Stand" ]
}

[sub_resource type="Animation" id=18]
resource_name = "2"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "WalkDown" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 49, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioStep")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_sound"
}, {
"args": [  ],
"method": "stop_timer"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Other:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Walk", "Worry" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Other:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 22, -16 ), Vector2( 31, -16 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "3"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "WalkDown", "Dead" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 49, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioStep")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_sound"
}, {
"args": [  ],
"method": "stop_timer"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Other:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Walk", "Worry", "Hug" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Other:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 31, -16 ), Vector2( 43, -16 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "4"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dead" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 49, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioStep")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Other:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hug" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Other:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43, -16 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EntitySprite:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 66, -20 ), Vector2( 66, -8 ), Vector2( 66, -8 ), Vector2( 60, -5 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("EntitySprite:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.00392157, 0, 0.501961, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("EntitySprite:animation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.7, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "Idle", "AttackPrep", "AttackShoot" ]
}
tracks/10/type = "method"
tracks/10/path = NodePath("EntitySprite/Attack")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/11/type = "method"
tracks/11/path = NodePath("EntitySprite/Charge")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=21]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 83, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite/Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Other:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "default" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Other:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22, -16 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EntitySprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 66, -8 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EntitySprite:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.00392157, 0, 0.501961, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("EntitySprite:animation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=22]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -94, -0.25, 0, 0, 0.0176086, -110, -0.5, 0.00164795, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=23]
resource_name = "FadeOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -110, -0.5, 0.00164795, 0, 0.13623, -94, -0.25, 0, 0, 0.0176086 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Control:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -110, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[node name="GoalCutscene" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 17 )
anims/2 = SubResource( 18 )
anims/3 = SubResource( 19 )
anims/4 = SubResource( 20 )
anims/RESET = SubResource( 21 )
__meta__ = {
"_editor_description_": ""
}

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 9 )
texture_scale = 0.3
__meta__ = {
"_edit_lock_": true
}

[node name="EntitySprite" parent="." instance=ExtResource( 11 )]
modulate = Color( 0.00392157, 0, 0.501961, 0 )
position = Vector2( 66, -8 )
animation = "Idle"
frame = 1
playing = true
flip_h = true

[node name="Attack" type="AudioStreamPlayer2D" parent="EntitySprite"]
stream = ExtResource( 6 )

[node name="Charge" type="AudioStreamPlayer2D" parent="EntitySprite"]
stream = ExtResource( 7 )

[node name="PlayerSprite" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 83, -5 )
animation = "WalkDown"
frame = 1
playing = true
flip_h = true

[node name="DashIndicator" parent="PlayerSprite" index="0"]
visible = false
flip_h = true

[node name="Light2D" type="Light2D" parent="PlayerSprite"]
position = Vector2( 0, -10 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="Other" type="AnimatedSprite" parent="."]
material = ExtResource( 1 )
position = Vector2( 22, -16 )
frames = ExtResource( 12 )
playing = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Light2D2" type="Light2D" parent="Other"]
texture = ExtResource( 9 )
texture_scale = 0.2
energy = 0.5
__meta__ = {
"_edit_lock_": true
}

[node name="Doritos" type="Sprite" parent="."]
position = Vector2( 24, -24 )
texture = ExtResource( 14 )

[node name="Fireplace" type="AnimatedSprite" parent="."]
position = Vector2( 0, -5 )
frames = ExtResource( 13 )
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Xcyiterr-adventure" type="Sprite" parent="."]
position = Vector2( -47, -20 )
texture = ExtResource( 15 )

[node name="Tent" type="Sprite" parent="."]
position = Vector2( -31, -16 )
texture = ExtResource( 4 )

[node name="AudioStep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="AudioStep"]
wait_time = 0.3
one_shot = true

[node name="ControlPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 22 )
anims/FadeOut = SubResource( 23 )
anims/RESET = SubResource( 24 )

[node name="Control" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
light_mask = 0
margin_left = -97.0
margin_top = -110.0
margin_right = 98.0
margin_bottom = -70.0

[node name="Label" type="Label" parent="Control"]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 193.0
margin_bottom = 38.0
rect_scale = Vector2( 0.5, 0.5 )
text = "I don't have time."
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.352941 )
material = ExtResource( 1 )
margin_left = -7.0
margin_top = 105.0
margin_right = 41.0
margin_bottom = 117.0
rect_scale = Vector2( 0.5, 0.5 )
text = "[R] >"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Heartbreak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AudioStep/Timer" to="AudioStep" method="_on_Timer_timeout"]
[connection signal="animation_finished" from="ControlPlayer" to="." method="_on_ControlPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="PlayerSprite"]
